[package]
name = "exr"
description = "Read and write OpenEXR files without any unsafe code"
keywords = ["exr", "openexr", "file", "binary", "io"]
categories = ["encoding", "filesystem", "graphics", "multimedia"]

version = "1.74.0"
edition = "2018"
authors = ["johannesvollmer <contact@johannesvollmer.com>"]

repository = "https://github.com/johannesvollmer/exrs"
readme = "README.md"
license = "BSD-3-Clause"
exclude = [ "specification/*", "specification/**", "tests/images/*", "tests/images/**" ]
rust-version = "1.61.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
path = "src/lib.rs"

[dependencies]
lebe = "^0.5.2"                # generic binary serialization
half = "2.2.1"                 # 16 bit float pixel data type
bit_field = "^0.10.3"          # exr file version bit flags
miniz_oxide = "^0.8.9"         # zip compression for pxr24
smallvec = "^1.15.1"            # make cache-friendly allocations        TODO profile if smallvec is really an improvement!
rayon-core = { version = "^1.11.0", optional = true }         # threading for parallel compression
zune-inflate = { version = "^0.2.54", default-features = false, features = ["zlib"] }  # zip decompression, faster than miniz_oxide

# View feature dependencies
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"], optional = true }
egui = { version = "0.33", optional = true }
egui_dock = { version = "0.18", optional = true }    # split panels
rfd = { version = "0.17", optional = true }           # file dialogs
three-d = { git = "https://github.com/asny/three-d", default-features = false, optional = true }  # 3D rendering

[dev-dependencies]
image = { version = "0.24.8", default-features = false, features = ["png"] }         # used to convert one exr to some pngs

bencher = "0.1.5"
walkdir = "2.5.0"         # automatically test things for all files in a directory
rand = "0.8.5"            # used for fuzz testing
rayon = "1.7.0"           # run tests for many files in parallel

[features]
default = ["rayon", "gen", "view", "view-3d"]

# rayon is used for parallel compression
rayon = ["dep:rayon-core"]

# Enable test utilities (validate_results module) for integration tests.
# Not for production use. See DEAD_CODE_ANALYSIS.md item #11.
test-utils = []

# Test image generator module
gen = []

# EXR viewer with 2D/3D visualization
view = ["dep:eframe", "dep:egui", "dep:rfd"]

# 3D viewer (point cloud, heightfield)
view-3d = ["view", "dep:three-d", "dep:egui_dock"]

[[bin]]
name = "exrs-gen"
path = "src/bin/exrs-gen.rs"
required-features = ["gen"]

[[bin]]
name = "exrs-view"
path = "src/bin/exrs-view.rs"
required-features = ["view"]

[[example]]
name = "7_write_raw_blocks"
required-features = ["rayon"]

[[example]]
name = "8_read_raw_blocks"
required-features = ["rayon"]

[[bench]]
name = "read"
harness = false
required-features = ["rayon"]

[[bench]]
name = "profiling"
harness = false
required-features = ["rayon"]

[[bench]]
name = "write"
harness = false
required-features = ["rayon"]

[[bench]]
name = "pixel_format_conversion"
harness = false
required-features = ["rayon"]

# recommended release settings for max runtime performance
[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1

# dev: fast builds, good runtime
[profile.dev]
incremental = true
opt-level = 2
debug-assertions = true
overflow-checks = true
debug = true

# test: fast builds
[profile.test]
incremental = true
opt-level = 2
debug-assertions = true
overflow-checks = true
debug = true

# bench with fastest runtime speed
[profile.bench]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
debug = true
codegen-units = 1
